--- a/ledger/participant-state/kvutils/BUILD.bazel
+++ b/ledger/participant-state/kvutils/BUILD.bazel
@@ -157,7 +157,7 @@ client_server_build(
     testonly = True,  # only test targets can depend on this.
     client = "//ledger/ledger-api-test-tool",
     client_args = [
-        "--exclude=LotsOfPartiesIT,TransactionScaleIT,CommandDeduplicationIT",
+        "--exclude=LotsOfPartiesIT,TransactionScaleIT",
         "--timeout-scale-factor=20",
         "localhost:6865",
     ],
